--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\91931\AppData\Local\Temp\testng-eclipse--1687751537\testng-customsuite.xml</span>
+                    <span>C:\Users\91931\AppData\Local\Temp\testng-eclipse--1842935842\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testCases.AddUser" class="method navigator-link" hash-for-method="addUser">addUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testCases.AddToCart" class="method navigator-link" hash-for-method="addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)">addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -121,17 +121,22 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">testCases.AddUser</span>
+              <span class="class-name">testCases.AddToCart</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addUser">
-                  </a> <!-- addUser -->
-                  <span class="method-name">addUser</span>
-                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebElement.click()&quot; because &quot;this.adminButton&quot; is null
-	at pageObjects.AdminPage.clickAdmin(AdminPage.java:41)
-	at testCases.AddUser.addUser(AddUser.java:25)
+                  <a name="addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)">
+                  </a> <!-- addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket) -->
+                  <span class="method-name">addToCart</span>
+                  <span class="parameters">(standard_user,secret_sauce,valid,Backpack, Fleece Jacket)</span>
+                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.SearchContext.findElement(org.openqa.selenium.By)&quot; because &quot;this.searchContext&quot; is null
+	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
+	at jdk.proxy2/jdk.proxy2.$Proxy17.sendKeys(Unknown Source)
+	at pageObjects.LoginPage.setUsername(LoginPage.java:28)
+	at testCases.LoginTest.loginVerification(LoginTest.java:16)
+	at testCases.AddToCart.addToCart(AddToCart.java:16)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -169,7 +174,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\91931\AppData\Local\Temp\testng-eclipse--1687751537\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\91931\AppData\Local\Temp\testng-eclipse--1842935842\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -178,7 +183,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.AddUser&quot;/&gt;
+      &lt;class name=&quot;testCases.AddToCart&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;addToCart&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- testCases.AddToCart --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,14 +229,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addUser')
-data.setCell(0, 2, 'testCases.AddUser')
-data.setCell(0, 3, 2505);
+data.setCell(0, 1, 'addToCart')
+data.setCell(0, 2, 'testCases.AddToCart')
+data.setCell(0, 3, 26);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 26 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -242,9 +251,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">testCases.AddToCart</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">loginVerification</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -253,7 +269,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.AddUser</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.AddToCart</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">login</span>
                 <span class="method-start">0 ms</span>
@@ -261,9 +277,13 @@ return data;
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">addUser</span>
-                <span class="method-start">14533 ms</span>
+                <span class="method-name">addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)</span>
+                <span class="method-start">4213 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">close</span>
+                <span class="method-start">4245 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
