--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.AddToCart" class="method navigator-link" hash-for-method="addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)">addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.CartCheckoutTest" class="method navigator-link" hash-for-method="cartCheckOut(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)">cartCheckOut(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.LoginTest" class="method navigator-link" hash-for-method="loginVerification(standard_user, secret_sauce, valid)">loginVerification(standard_user, secret_sauce, valid)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.InvalidLoginTest" class="method navigator-link" hash-for-method="invalidLoginTest(standard, secret_sauce)">invalidLoginTest(standard, secret_sauce)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -131,47 +121,15 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.AddToCart</span>
+              <span class="class-name">testCases.InvalidLoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)">
-                  </a> <!-- addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket) -->
-                  <span class="method-name">addToCart</span>
-                  <span class="parameters">(standard_user,secret_sauce,valid,Backpack, Fleece Jacket)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">testCases.CartCheckoutTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="cartCheckOut(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)">
-                  </a> <!-- cartCheckOut(standard_user, secret_sauce, valid, Backpack, Fleece Jacket) -->
-                  <span class="method-name">cartCheckOut</span>
-                  <span class="parameters">(standard_user,secret_sauce,valid,Backpack, Fleece Jacket)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">testCases.LoginTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginVerification(standard_user, secret_sauce, valid)">
-                  </a> <!-- loginVerification(standard_user, secret_sauce, valid) -->
-                  <span class="method-name">loginVerification</span>
-                  <span class="parameters">(standard_user,secret_sauce,valid)</span>
+                  <a name="invalidLoginTest(standard, secret_sauce)">
+                  </a> <!-- invalidLoginTest(standard, secret_sauce) -->
+                  <span class="method-name">invalidLoginTest</span>
+                  <span class="parameters">(standard,secret_sauce)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -193,9 +151,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;window&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.LoginTest&quot;/&gt;
-      &lt;class name=&quot;testCases.AddToCart&quot;/&gt;
-      &lt;class name=&quot;testCases.CartCheckoutTest&quot;/&gt;
+      &lt;class name=&quot;testCases.InvalidLoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- chrome --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -209,7 +165,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">chrome (3 classes)</span>
+                <span class="test-name">chrome (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -235,24 +191,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'cartCheckOut')
-data.setCell(0, 2, 'testCases.CartCheckoutTest')
-data.setCell(0, 3, 1869);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'addToCart')
-data.setCell(1, 2, 'testCases.AddToCart')
-data.setCell(1, 3, 1640);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginVerification')
-data.setCell(2, 2, 'testCases.LoginTest')
-data.setCell(2, 3, 600);
+data.setCell(0, 1, 'invalidLoginTest')
+data.setCell(0, 2, 'testCases.InvalidLoginTest')
+data.setCell(0, 3, 411);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -278,48 +226,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.InvalidLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">launch(window, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">loginVerification(standard_user, secret_sauce, valid)</span>
-                <span class="method-start">5840 ms</span>
+                <span class="method-name">invalidLoginTest(standard, secret_sauce)</span>
+                <span class="method-start">4656 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">close</span>
-                <span class="method-start">6463 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">testCases.AddToCart</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">launch(window, chrome)</span>
-                <span class="method-start">6710 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">addToCart(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)</span>
-                <span class="method-start">9627 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">close</span>
-                <span class="method-start">11268 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">testCases.CartCheckoutTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">launch(window, chrome)</span>
-                <span class="method-start">11495 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">cartCheckOut(standard_user, secret_sauce, valid, Backpack, Fleece Jacket)</span>
-                <span class="method-start">15105 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">close</span>
-                <span class="method-start">16977 ms</span>
+                <span class="method-start">5082 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
